# cg_math

./: CMakeLists.txt  README.md
include/: cg_math.h  cgmath.h  float2.h  float3.h  float4.h  int2.h  int3.h  int4.h  matrix3x3.h  matrix3x4.h  matrix4x3.h  matrix4x4.h  pch.h  uint2.h  uint3.h  uint4.h  vector2.h  vector3.h  vector4.h
src/: cg_math.cpp
